# passpls

./: Cargo.toml  LICENSE  README.md
assets/: dict.txt
src/: main.rs
