[package]
name = "passpls"
authors = ["Jayden Dumouchel <jdumouch@ualberta.ca>"]
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
rand = { version = "0.8.5", features = ["getrandom"] }

termcolor = { version = "1.1.3", optional = true }
copypasta-ext = { version = "0.3.9", optional = true }

[features]
default = [ "clipboard", "style" ]
clipboard = [ "dep:copypasta-ext" ]
style = [ "dep:termcolor" ]
